--- a/package.json
+++ b/package.json
@@ -44,8 +44,10 @@
     ]
   },
   "devDependencies": {
+    "@types/react-router-dom": "^5.3.2",
     "autoprefixer": "^9",
     "postcss": "^7",
+    "react-router-dom": "^6.0.2",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat"
   }
 }
