--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "@types/google.maps": "^3.47.2",
     "@types/react-router-dom": "^5.3.2",
     "autoprefixer": "^9",
     "postcss": "^7",
